# amplifier

ai_working/ampbox/: API-DESIGN-PATTERNS.md  API-QUICK-REFERENCE.md  INDEX.md  README-PACKAGE.md  README.md  RESEARCH_AI_UI_TOOLKITS.md  RESEARCH_ECOSYSTEM.md  SUMMARY.md  VISION.md  ampbox-api-contracts.yaml
workspaces/ampbox/: POC_SUMMARY.md  README.md  pyproject.toml  research_report.md
workspaces/ampbox/.ampbox_state/: research_assistant_20251112_123615_analyze_with_agent.json  research_assistant_20251112_123615_format_report.json  research_assistant_20251112_123615_load_documents.json  research_assistant_latest.json
workspaces/ampbox/ampbox/: __init__.py  amplifier_node.py  workflow.py
workspaces/ampbox/ampbox/examples/: research_assistant.py
workspaces/ampbox/research_docs/: sample1.md  sample2.md
