[project]
name = "ampbox"
version = "0.1.0"
description = "AmpBox: Integrated runtime for AI agents - minimal POC"
requires-python = ">=3.11"
dependencies = [
    # Zero external dependencies for POC
    # Uses Amplifier@next from /Users/ken/amplifier
]

[tool.uv.sources]
# Reference Amplifier from the other workspace location
amplifier = { path = "../../../amplifier", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
]
