[project]
name = "ampbox"
version = "0.1.0"
description = "AmpBox: Integrated runtime for AI agents - Amplifier + LangGraph bridge"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",  # Workflow orchestration - use existing, don't reinvent
]

[tool.uv.sources]
# Reference Amplifier from the other workspace location
amplifier = { path = "../../../amplifier", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
]
